--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,7 +55,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day_layout"
             app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/list_view_item" />
+            tools:listitem="@layout/list_view_item"
+            app:listData="@{viewModel.asteroids}"/>
 
         <ProgressBar
             android:id="@+id/status_loading_wheel"
